# issdk-projektas

./: Cargo.toml  issdk_kursinis_Emilis_Margevicius_PI19B.odt
server/: Cargo.toml  data.sqlite
server/db/: db.sql  setup_db.sh
server/src/: main.rs  models.rs  repo.rs  routes.rs
server/src/routes/: auth.rs  dashboard.rs
server/static/css/: style.css
server/static/html/: login.html
server/static/js/: validator_registration.js
server/templates/: base.html  dashboard_articles.html  dashboard_options.html  dashboard_users.html  dashnav.html  index.html  login.html  post_article.html  register.html
