[package]
name = "devclectic-server"
version = "0.1.0"
edition = "2021"
authors = [ "Emilis MargeviÄius <gameciopath@gmail.com>" ]


[dependencies]
actix-web = { version="3", features=["rustls"] }
actix-identity = "0.3.1"
actix-session = "0.4.1"
actix-files = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
r2d2 = "0.8.9"
rand = "0.8.4"
env_logger = "0.9.0"
chrono = "0.4.19"
tera = "1.15.0"
# SSLo
actix-rt = "1.1.1"
rustls = "0.17.0"
# SQLite
r2d2_sqlite = "0.19"
